testsuite/poke.pkl/printf-diag-6.pk
/* { dg-do compile } */

/* Empty class tags are not allowed.  */

printf "%<:%>"; /* { dg-error "" } */
